Summernote styles fix

--- a/less/fontawesome/icons.less
+++ b/less/fontawesome/icons.less
@@ -46,7 +46,7 @@
 .@{fa-css-prefix}-tag:before { content: @fa-var-tag; }
 .@{fa-css-prefix}-tags:before { content: @fa-var-tags; }
 .@{fa-css-prefix}-book:before { content: @fa-var-book; }
-.@{fa-css-prefix}-bookmark:before { content: @fa-var-bookmark; }
+.@{fa-css-prefix}-bookmark:before { content: @fa-var-bookmark; }*/
 .@{fa-css-prefix}-print:before { content: @fa-var-print; }
 .@{fa-css-prefix}-camera:before { content: @fa-var-camera; }
 .@{fa-css-prefix}-font:before { content: @fa-var-font; }
@@ -62,6 +62,7 @@
 .@{fa-css-prefix}-dedent:before,
 .@{fa-css-prefix}-outdent:before { content: @fa-var-outdent; }
 .@{fa-css-prefix}-indent:before { content: @fa-var-indent; }
+
 .@{fa-css-prefix}-video-camera:before { content: @fa-var-video-camera; }
 .@{fa-css-prefix}-picture-o:before { content: @fa-var-picture-o; }
 .@{fa-css-prefix}-pencil:before { content: @fa-var-pencil; }
@@ -70,6 +71,7 @@
 .@{fa-css-prefix}-tint:before { content: @fa-var-tint; }
 .@{fa-css-prefix}-edit:before,
 .@{fa-css-prefix}-pencil-square-o:before { content: @fa-var-pencil-square-o; }
+/*
 .@{fa-css-prefix}-share-square-o:before { content: @fa-var-share-square-o; }
 .@{fa-css-prefix}-check-square-o:before { content: @fa-var-check-square-o; }
 .@{fa-css-prefix}-arrows:before { content: @fa-var-arrows; }
@@ -177,7 +179,7 @@
 .@{fa-css-prefix}-briefcase:before { content: @fa-var-briefcase; }
 .@{fa-css-prefix}-arrows-alt:before { content: @fa-var-arrows-alt; }
 .@{fa-css-prefix}-group:before,
-.@{fa-css-prefix}-users:before { content: @fa-var-users; }
+.@{fa-css-prefix}-users:before { content: @fa-var-users; }*/
 .@{fa-css-prefix}-chain:before,
 .@{fa-css-prefix}-link:before { content: @fa-var-link; }
 .@{fa-css-prefix}-cloud:before { content: @fa-var-cloud; }
@@ -196,8 +198,8 @@
 .@{fa-css-prefix}-strikethrough:before { content: @fa-var-strikethrough; }
 .@{fa-css-prefix}-underline:before { content: @fa-var-underline; }
 .@{fa-css-prefix}-table:before { content: @fa-var-table; }
-.@{fa-css-prefix}-magic:before { content: @fa-var-magic; }
-.@{fa-css-prefix}-truck:before { content: @fa-var-truck; }
+.@{fa-css-prefix}-magic:before { content: @fa-var-magic; }/*
+.@{fa-css-prefix}-truck:before { content: @fa-var-truck; }/*
 .@{fa-css-prefix}-pinterest:before { content: @fa-var-pinterest; }
 .@{fa-css-prefix}-pinterest-square:before { content: @fa-var-pinterest-square; }
 .@{fa-css-prefix}-google-plus-square:before { content: @fa-var-google-plus-square; }
@@ -288,7 +290,7 @@
 .@{fa-css-prefix}-star-half-o:before { content: @fa-var-star-half-o; }
 .@{fa-css-prefix}-location-arrow:before { content: @fa-var-location-arrow; }
 .@{fa-css-prefix}-crop:before { content: @fa-var-crop; }
-.@{fa-css-prefix}-code-fork:before { content: @fa-var-code-fork; }
+.@{fa-css-prefix}-code-fork:before { content: @fa-var-code-fork; }*/
 .@{fa-css-prefix}-unlink:before,
 .@{fa-css-prefix}-chain-broken:before { content: @fa-var-chain-broken; }
 .@{fa-css-prefix}-question:before { content: @fa-var-question; }
@@ -296,7 +298,7 @@
 .@{fa-css-prefix}-exclamation:before { content: @fa-var-exclamation; }
 .@{fa-css-prefix}-superscript:before { content: @fa-var-superscript; }
 .@{fa-css-prefix}-subscript:before { content: @fa-var-subscript; }
-.@{fa-css-prefix}-eraser:before { content: @fa-var-eraser; }
+.@{fa-css-prefix}-eraser:before { content: @fa-var-eraser; }/*
 .@{fa-css-prefix}-puzzle-piece:before { content: @fa-var-puzzle-piece; }
 .@{fa-css-prefix}-microphone:before { content: @fa-var-microphone; }
 .@{fa-css-prefix}-microphone-slash:before { content: @fa-var-microphone-slash; }
@@ -365,8 +367,8 @@
 .@{fa-css-prefix}-youtube-square:before { content: @fa-var-youtube-square; }
 .@{fa-css-prefix}-youtube:before { content: @fa-var-youtube; }
 .@{fa-css-prefix}-xing:before { content: @fa-var-xing; }
-.@{fa-css-prefix}-xing-square:before { content: @fa-var-xing-square; }
-.@{fa-css-prefix}-youtube-play:before { content: @fa-var-youtube-play; }
+.@{fa-css-prefix}-xing-square:before { content: @fa-var-xing-square; }*/
+.@{fa-css-prefix}-youtube-play:before { content: @fa-var-youtube-play; }/*
 .@{fa-css-prefix}-dropbox:before { content: @fa-var-dropbox; }
 .@{fa-css-prefix}-stack-overflow:before { content: @fa-var-stack-overflow; }
 .@{fa-css-prefix}-instagram:before { content: @fa-var-instagram; }
