--- a/views/admin/admin.html
+++ b/views/admin/admin.html
@@ -1,4 +1,7 @@
 {% extends "/layout.html" %}
+{%block styles%}
+<link rel="stylesheet" href="/styles/summernote.css">
+{%endblock%}
 <!----->
 {%block main%}
 <div class="row">
