--- a/less/bootstrap/bootstrap.less
+++ b/less/bootstrap/bootstrap.less
@@ -18,8 +18,8 @@
 // Components
 @import "component-animations.less";
 /* @import "glyphicons.less"; */
-/* @import "dropdowns.less"; */
-/* @import "button-groups.less"; */
+@import "dropdowns.less";
+@import "button-groups.less";
 @import "input-groups.less";
 @import "navs.less";
 @import "navbar.less";
@@ -40,7 +40,7 @@
 
 // Components w/ JavaScript
 @import "modals.less";
-/* @import "tooltip.less"; */
+@import "tooltip.less";
 /* @import "popovers.less"; */
 /* @import "carousel.less"; */
 
