Empty class schedule bug fix

--- a/less/main.less
+++ b/less/main.less
@@ -94,7 +94,7 @@ article {
 ============================================================================
 */
 
-table {
+table.schedule {
     tr{
         background-color: #FEFEFE;
         &:first-child {
