--- a/views/admin/post.html
+++ b/views/admin/post.html
@@ -36,14 +36,13 @@
             </fieldset>
         </div>
         <input type="hidden" id="publish" name="publish" value="false">
-        <button type="button" id="publish-button"></button>
-        {% if post%}
-        <button class="btn btn-success pull-left">Update Post</button>
-        <button onclick="deletepost()" class="btn btn-danger pull-right" type="button">Delete Post</button>
-        {% else %}
-        <button class="btn btn-primary">Save Post</button>
-        {% endif %}
-
+        <div class="row">
+            <button class="btn btn-primary col-xs-12 col-sm-4">{{'Update Post' if post else 'Save Post'}}</button>
+            {%if not post.isPublished%}
+                    <button class="btn btn-success col-xs-12 col-sm-4" type="button" id="publish-button">Publish</button>
+            {%endif%} 
+            <button onclick="deletepost()" class="btn btn-danger col-xs-12 col-sm-4 {{'col-sm-offset-4' if post.published}}" type="button">Delete Post</button>
+        </div>
     </form>
 </div>
 {%endblock%} {%block scripts%}
@@ -78,8 +77,8 @@
         ]
     });
     $summernote.code("{{post.body | regexReplace('"', "g", '\\"') | safe}}");
-    </script>
-    <script>
+</script>
+<script>
     //slug
     var $slug = $("#slug");
     function generateSlug(){
@@ -88,17 +87,17 @@
         $slug.val(slug);
     }
     $title = $("#title").on('keyup blur', generateSlug);
-    </script>
-    <script>
+</script>
+<script>
     $("#publish-button").click(function(e){
         $("#publish").val("true");
         $("#form").submit();
     });
-    </script>
-    
-    
-    
-    <script>
+</script>
+
+
+
+<script>
     //
     $('#form').submit(function(e){
         e.preventDefault();
