Footer text change

--- a/views/layout.html
+++ b/views/layout.html
@@ -78,8 +78,7 @@
     </main>
     <footer>
         <a href="/admin" class="pull-right"><i class="fa fa-cogs"></i></a>
-        <p class="pull-right">&copy 2014 Matt Enlow</p>
-        <p class="text-center">I haven't decided what to put here yet!</p>
+        <p class="pull-right">Site by <a href="//novaugust.net/blog">Matt Enlow</a></p>
     </footer>
     <!-- scripts -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
