--- a/less/ananda.less
+++ b/less/ananda.less
@@ -1,6 +1,7 @@
 @import "bootstrap/bootstrap.less";
 @import "fontawesome/font-awesome.less";
 
+@import "variables.less";
 @import "dev.less";
 @import "main.less";
 @import "header.less";
